<resources>
    <string name="app_name">Fiesta del Árbol</string>

    <string name="title_activity_welcome">@string/app_name</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="tree_party">FIESTA DEL ÁRBOL</string>
    <string name="play">Jugar</string>
    <string name="the_contest">El concurso</string>
    <string name="start">Empezar</string>
    <string name="add_player">Añadir jugador</string>
    <string name="add_player_hint"><![CDATA[<Añadir jugador>]]></string>
    <string name="player_name">Nombre del equipo/jugador</string>
    <string name="choose_avatar">Escoge tu avatar</string>
    <string name="question">Pregunta</string>
    <string name="music">¡Música maestro!</string>
    <string name="true_false">Verdadero o falso</string>
    <string name="skill">Habilidad</string>
    <string name="quick">Ronda rápida</string>
    <string name="continue_game">Siguiente</string>
    <string name="answer">Respuesta</string>
    <string name="round">Ronda %1$d</string>
    <string name="remove_player">Eliminar jugador</string>
</resources>
