<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <View
        android:id="@+id/padd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/padd"
        app:layout_constraintTop_toTopOf="@id/padd" />

    <ImageButton
        android:id="@+id/close_dialog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:src="@drawable/close"
        app:layout_constraintStart_toEndOf="@id/space"
        app:layout_constraintBottom_toTopOf="@id/space" />


    <EditText
        android:id="@+id/player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/player_name"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#999999"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="@+id/padd"
        app:layout_constraintStart_toStartOf="@+id/padd"
        app:layout_constraintTop_toTopOf="@+id/padd" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/add_player"
        app:layout_constraintEnd_toEndOf="@+id/padd"
        app:layout_constraintStart_toStartOf="@+id/padd"
        app:layout_constraintTop_toBottomOf="@+id/player_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/avatar_1" />

            <ImageView
                android:id="@+id/avatar_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/avatar_2" />

            <ImageView
                android:id="@+id/avatar_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/avatar_3" />

            <ImageView
                android:id="@+id/avatar_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/avatar_4" />

            <ImageView
                android:id="@+id/avatar_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/avatar_5"
                tools:background="@drawable/selected_avatar" />

            <ImageView
                android:id="@+id/avatar_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/avatar_6" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/remove_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/remove_player"
        app:layout_constraintBottom_toBottomOf="@+id/padd"
        app:layout_constraintEnd_toStartOf="@+id/add_player"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/padd" />


    <Button
        android:id="@+id/add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_player"
        app:layout_constraintBottom_toBottomOf="@+id/padd"
        app:layout_constraintEnd_toEndOf="@+id/padd" />

</android.support.constraint.ConstraintLayout>