<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSelectionActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/birdgame"
        android:text="@string/title_activity_welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/avatar_1_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/main_button"
        android:enabled="false"
        android:fontFamily="@font/birdgame"
        android:padding="0dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:enabled="true" />

    <ImageView
        android:id="@+id/add_player1"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/add_contact"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toStartOf="@+id/add_player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.39"
        tools:src="@drawable/avatar_1" />

    <ImageView
        android:id="@+id/add_player2"
        android:layout_width="161dp"
        android:layout_height="100dp"
        android:src="@drawable/add_contact"
        app:layout_constraintBottom_toBottomOf="@+id/add_player1"
        app:layout_constraintEnd_toStartOf="@+id/add_player3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_player1"
        app:layout_constraintTop_toTopOf="@+id/add_player1"
        tools:src="@drawable/avatar_3" />

    <ImageView
        android:id="@+id/add_player3"
        android:layout_width="161dp"
        android:layout_height="100dp"
        android:src="@drawable/add_contact"
        app:layout_constraintBottom_toBottomOf="@+id/add_player2"
        app:layout_constraintEnd_toStartOf="@+id/add_player4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_player2"
        app:layout_constraintTop_toTopOf="@+id/add_player2"
        tools:src="@drawable/avatar_5" />

    <ImageView
        android:id="@+id/add_player4"
        android:layout_width="161dp"
        android:layout_height="100dp"
        android:src="@drawable/add_contact"
        app:layout_constraintBottom_toBottomOf="@+id/add_player3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_player3"
        app:layout_constraintTop_toTopOf="@+id/add_player3" />

    <TextView
        android:id="@+id/player_1_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_player_hint"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/add_player1"
        app:layout_constraintStart_toStartOf="@+id/add_player1"
        app:layout_constraintTop_toBottomOf="@+id/add_player1"
        tools:text="Los trotamúsicos" />

    <TextView
        android:id="@+id/player_2_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_player_hint"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/add_player2"
        app:layout_constraintStart_toStartOf="@+id/add_player2"
        app:layout_constraintTop_toBottomOf="@+id/add_player2"
        tools:text="Th3 v3rY b3sT" />

    <TextView
        android:id="@+id/player_3_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_player_hint"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/add_player3"
        app:layout_constraintStart_toStartOf="@+id/add_player3"
        app:layout_constraintTop_toBottomOf="@+id/add_player3"
        tools:text="We are the champions my friend" />

    <TextView
        android:id="@+id/player_4_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_player_hint"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/add_player4"
        app:layout_constraintStart_toStartOf="@+id/add_player4"
        app:layout_constraintTop_toBottomOf="@+id/add_player4"
        tools:text="@string/add_player_hint" />


</android.support.constraint.ConstraintLayout>